--- a/404.html
+++ b/404.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <nav class="nav">
-        <a href="#" class="nav__link" data-link>Dashboard</a>
-        <a href="#posts" class="nav__link" data-link>Posts</a>
-        <a href="#settings" class="nav__link" data-link>Settings</a>
-    </nav>
 
 <head>
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
@@ -19,10 +14,8 @@
 <body>
     <script type="text/javascript">
         var currentLocation = location.href;
-        location.replace("https://marco-puig.github.io/opennote/" + currentLocation.split("/").pop());
+        location.replace("https://marco-puig.github.io/" + currentLocation.split("/").pop());
     </script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 </body>
 
 </html>
