--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <body>
     <script type="text/javascript">
         var currentLocation = location.href;
-        location.replace("https://marco-puig.github.io/opennote" + currentLocation.split("/").pop());
+        location.replace("https://marco-puig.github.io/opennote/");
     </script>
 </body>
 
